--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon node index.js",
+    "start": "node index.js",
+    "start-dev": "nodemon node index.js",
     "deploy": "scripts/deploy",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "touch secrets.js"
