--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "0.0.1-security",
     "mongodb": "~3.1.4",
     "morgan": "^1.9.0",
+    "newrelic": "^4.9.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "path": "^0.12.7"
